--- a/20170601_SECM/main.tex
+++ b/20170601_SECM/main.tex
@@ -182,7 +182,7 @@
 %%% SUMMARY & OUTLOOK %%%
 
 \begin{frame}{Status}
-    \begin{columns}
+    \begin{columns}[t]
     	\begin{column}{.5\textwidth}
     		\begin{itemize}
     		\item[+] Generalized hypergraph library
